--- a/templates/base.html
+++ b/templates/base.html
@@ -160,7 +160,7 @@
                      {% if is_privileged or 'Foreman/Duty Officer' in user_roles %}
                         <li class="nav-item">
                             <a class="nav-link" href="/duty-officer-reports">
-                                <i class="bi bi-person-check me-2"></i> Form B Progress Reports
+                                <i class="bi bi-person-check me-2"></i> DO Progress Reports
                             </a>
                         </li>
                         {% endif %}
@@ -168,7 +168,7 @@
                         {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
                         <li class="nav-item">
                             <a class="nav-link" href="/site-officer-reports">
-                                <i class="bi bi-clipboard2-check me-2"></i> Form C Daily Reports
+                                <i class="bi bi-clipboard2-check me-2"></i> SO Daily Reports
                             </a>
                         </li>
                         {% endif %}
@@ -317,14 +317,14 @@
                      {% if is_privileged or 'Foreman/Duty Officer' in user_roles %}
                     <li class="nav-item">
                         <a class="nav-link" href="/duty-officer-reports">
-                            <i class="bi bi-person-check me-2"></i> Form B Progress Reports
+                            <i class="bi bi-person-check me-2"></i> DO Progress Reports
                         </a>
                     </li>
                     {% endif %}
                     {% if is_privileged or 'Supervisor/Site Officer' in user_roles %}
                         <li class="nav-item">
                             <a class="nav-link" href="/site-officer-reports">
-                                <i class="bi bi-clipboard2-check me-2"></i> Form C Daily Reports
+                                <i class="bi bi-clipboard2-check me-2"></i> SO Daily Reports
                             </a>
                         </li>
                         {% endif %}
